bk_ida/gccida/g0/visit_expression
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/visit_expression/src/ssa-ccp.c:716:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode0; // [rsp+34h] [rbp-BCh] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/visit_expression/src/ssa-ccp.c:721:4: error: expected ';' after expression
rtx dest; // [rsp+48h] [rbp-A8h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/visit_expression/src/ssa-ccp.c:721:5: error: use of undeclared identifier 'dest'
rtx dest; // [rsp+48h] [rbp-A8h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/visit_expression/src/ssa-ccp.c:722:4: error: expected ';' after expression
rtx src; // [rsp+50h] [rbp-A0h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/visit_expression/src/ssa-ccp.c:722:5: error: use of undeclared identifier 'src'
rtx src; // [rsp+50h] [rbp-A0h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/visit_expression/src/ssa-ccp.c:724:4: error: expected ';' after expression
rtx src2; // [rsp+68h] [rbp-88h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/visit_expression/src/ssa-ccp.c:724:5: error: use of undeclared identifier 'src2'
rtx src2; // [rsp+68h] [rbp-88h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/visit_expression/src/ssa-ccp.c:725:4: error: expected ';' after expression
rtx src1_1; // [rsp+70h] [rbp-80h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/visit_expression/src/ssa-ccp.c:725:5: error: use of undeclared identifier 'src1_1'
rtx src1_1; // [rsp+70h] [rbp-80h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/visit_expression/src/ssa-ccp.c:726:4: error: expected ';' after expression
rtx src0_2; // [rsp+78h] [rbp-78h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/visit_expression/src/ssa-ccp.c:726:5: error: use of undeclared identifier 'src0_2'
rtx src0_2; // [rsp+78h] [rbp-78h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/visit_expression/src/ssa-ccp.c:727:4: error: expected ';' after expression
rtx src1_0; // [rsp+80h] [rbp-70h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/visit_expression/src/ssa-ccp.c:727:5: error: use of undeclared identifier 'src1_0'
rtx src1_0; // [rsp+80h] [rbp-70h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/visit_expression/src/ssa-ccp.c:728:4: error: expected ';' after expression
rtx src0_1; // [rsp+88h] [rbp-68h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/visit_expression/src/ssa-ccp.c:728:5: error: use of undeclared identifier 'src0_1'
rtx src0_1; // [rsp+88h] [rbp-68h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/visit_expression/src/ssa-ccp.c:729:4: error: expected ';' after expression
rtx src0_0; // [rsp+90h] [rbp-60h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/visit_expression/src/ssa-ccp.c:729:5: error: use of undeclared identifier 'src0_0'
rtx src0_0; // [rsp+90h] [rbp-60h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/visit_expression/src/ssa-ccp.c:730:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+9Ch] [rbp-54h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/visit_expression/src/ssa-ccp.c:731:4: error: expected ';' after expression
rtx src1; // [rsp+A0h] [rbp-50h] 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/visit_expression/src/obj/ssa-ccp.o] Error 1
